# Lab_project_template_v2

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml  update-readme-badges.yml
assets/: README.md
config/: config.yaml  paths.yaml
data/metadata/: README.md
data/paradata/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: README.md  architecture.md
envs/: README.md  environment-dev.yml
interfaces/: README.md
logs/: README.md
notebooks/: README.md
results/: README.md
results/embeddings/: README.md
results/exports/: README.md
results/figures/: README.md
results/logs/: README.md
results/models/: README.md
results/reports/: README.md
results/supplementary/: README.md
results/tables/: README.md
scripts/: README.md
src/: README.md
tests/: README.md  test_smoke.py
workflows/: README.md
